nuget package updates
Former-commit-id: ce036737438062a3ca8a9110f355babac371f2cd
Former-commit-id: 596cee7ed27420f2d8791c6d499685df76eec757 [formerly 1626b8b6a4820c8ccf0efc993cfd03672e8a7a54]
Former-commit-id: 7cf15b1b0347cbc785bd1b6363c792489625dae6

--- a/src/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI" Version="8.0.0-alpha0113" />
-    <PackageReference Include="refit" Version="4.0.1" />
+    <PackageReference Include="ReactiveUI" Version="8.3.1" />
+    <PackageReference Include="refit" Version="4.6.16" />
   </ItemGroup>
 
   <ItemGroup>
