--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI" Version="8.0.0-alpha0113" />
-    <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="2.0.0.31-beta" />
+    <PackageReference Include="ReactiveUI" Version="8.3.1" />
+    <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.77107" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.583944" />
   </ItemGroup>
 
   <ItemGroup>
