--- a/src/MigrationBackup/a22e0352/Client/Platform/Restaurant.iOS/packages.config
+++ b/src/MigrationBackup/a22e0352/Client/Platform/Restaurant.iOS/packages.config
@@ -1,33 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.6.2" targetFramework="xamarinios10" />
-  <package id="AutoMapper" version="6.2.0" targetFramework="xamarinios10" />
-  <package id="IdentityModel" version="2.16.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AspNetCore.WebUtilities" version="1.1.2" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.Net.Http.Headers" version="1.1.2" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Autofac" version="4.8.1" targetFramework="xamarinios10" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="xamarinios10" />
+  <package id="IdentityModel" version="3.8.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
-  <package id="reactiveui" version="7.4.0" targetFramework="xamarinios10" />
-  <package id="reactiveui-core" version="7.4.0" targetFramework="xamarinios10" />
-  <package id="Refit" version="4.0.1" targetFramework="xamarinios10" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
-  <package id="Splat" version="1.4.0" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="xamarinios10" />
+  <package id="Refit" version="4.6.16" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Buffers" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.ComponentModel" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Console" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
@@ -43,7 +35,8 @@
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="xamarinios10" />
+  <package id="System.Memory" version="4.5.1" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
@@ -53,7 +46,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="xamarinios10" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
@@ -61,21 +54,22 @@
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="xamarinios10" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="xamarinios10" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="3.0.0.5" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.5.0.77107" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.1.0.583944" targetFramework="xamarinios10" />
 </packages>
