--- a/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.6.2" />
-    <PackageReference Include="AutoMapper" Version="6.2.0" />
-    <PackageReference Include="IdentityModel" Version="2.16.0" />
-    <PackageReference Include="JetBrains.Annotations" Version="10.2.1" />
-    <PackageReference Include="ReactiveUI" Version="8.0.0-alpha0113" />
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="IdentityModel" Version="3.8.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
+    <PackageReference Include="ReactiveUI" Version="8.3.1" />
   </ItemGroup>
 
   <ItemGroup>
