--- a/src/Client/Restaurant.Client/Restaurant.Droid/Properties/AndroidManifest.xml
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Restaurant.Restaurant" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="16" />
+	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:theme="@style/MainTheme" android:icon="@drawable/ic_food"></application>
 </manifest>
