Navigation renderer refactoring
Former-commit-id: 36fc203e09fee8b053388b965eda91e77a732e44
Former-commit-id: d76420c072bab2b5c2d7bbf3b0708625a3f81eb2 [formerly b2a9e98ca5a3238b5c36cf709f0e7ca4b6829091]
Former-commit-id: 7b8caf473a8520372d3a83ccf593d94d43cabc74

--- a/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -80,9 +80,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BadgeDrawable.cs" />
     <Compile Include="Effects\ListViewScrollEffect.cs" />
     <Compile Include="Effects\MaxLinesEffect.cs" />
-    <Compile Include="Providers\ColorProvider.cs" />
     <Compile Include="Providers\DrawableProvider.cs" />
     <Compile Include="Renderers\CustomNavigationPageRenderer.cs" />
     <Compile Include="Renderers\CustomSearchBarRenderer.cs" />
@@ -473,6 +473,9 @@
       <Project>{af5c0ef6-3675-4a5e-a2f3-daff4dde228d}</Project>
       <Name>Restaurant.Mobile.UI</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\dimens.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
