--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
@@ -23,4 +23,10 @@
     <Folder Include="Pages\iOS\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Pages\CustomNavigationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
