Logging and appcenter setup
Former-commit-id: a3247147c5f90686c7559cc0441f98f61c9d8fdd
Former-commit-id: ac559fbe438f8d4b5fd80dc4167ca1a3acd9bc53 [formerly e6c154e99d843fbddf6e44fde58a2743e95ad4bd]
Former-commit-id: 9fc0a7d790f8c13cdbe82b1b19a3572f1bee6c4c

--- a/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="IdentityModel" Version="3.8.0" />
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
+    <PackageReference Include="NLog" Version="4.5.6" />
     <PackageReference Include="ReactiveUI" Version="8.3.1" />
   </ItemGroup>
 
