--- a/src/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="ReactiveUI" Version="8.3.1" />
-    <PackageReference Include="refit" Version="4.6.16" />
+    <PackageReference Include="Refit" Version="4.6.16" />
   </ItemGroup>
 
   <ItemGroup>
