moving from monolytic architicture to microservices architicture
Former-commit-id: 2edf47a8917db340be684ac732ce8845abc8d7c6
Former-commit-id: 61a02d93515b88083d1b88de32ada35f175aefe6 [formerly d6ba0e5309e4ffbc9a784ed90ad1c60717c39408]
Former-commit-id: 3b06a02238112f0c9fcc46bed6e7327597f17257

--- a/src/Server/Tests/Restaurant.Server.Api.UnitTests/Restaurant.Server.Api.UnitTests.csproj
+++ b/src/Server/Tests/Restaurant.Server.Api.UnitTests/Restaurant.Server.Api.UnitTests.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\Restaurant.Server.Api\Restaurant.Server.Api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Providers\" />
+  </ItemGroup>
+
 </Project>
