--- a/src/Server/Restaurant.Server.Api/Restaurant.Server.Api.csproj
+++ b/src/Server/Restaurant.Server.Api/Restaurant.Server.Api.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\PublishProfiles\" />
+    <Folder Include="Providers\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
   <ItemGroup>
