moved common logic
Former-commit-id: 48aab34876f36d88b9ceaa9e9a9b460208fb1a8b
Former-commit-id: 900b2ca1c3f3898db0476c393f46441860ec673c [formerly 0cc8818babdd8696aa2fa494e94e9f354209a7e3]
Former-commit-id: 2b622ee7a18db7ba3359ce1d470095aa66dfd28d

--- a/src/Server/Services/Identity/Identity.API/Identity.API.csproj
+++ b/src/Server/Services/Identity/Identity.API/Identity.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Managers\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -18,6 +19,10 @@
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="0.17.1754972" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\Common\Services.Core\Services.Core.csproj" />
   </ItemGroup>
 
 </Project>
