--- a/src/Server/Services/Menu/Menu.API/Menu.API.csproj
+++ b/src/Server/Services/Menu/Menu.API/Menu.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Abstraction\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -12,6 +13,10 @@
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\Common\Services.Core\Services.Core.csproj" />
   </ItemGroup>
 
 </Project>
