--- a/src/Server/BuildingBlocks/Testing/BaseUnitTests/BaseUnitTests.csproj
+++ b/src/Server/BuildingBlocks/Testing/BaseUnitTests/BaseUnitTests.csproj
@@ -9,11 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
-    <PackageReference Include="AutoFixture" Version="4.0.0-rc1" />
-    <PackageReference Include="AutoFixture.AutoMoq" Version="4.0.0-rc1" />
-    <PackageReference Include="AutoFixture.Idioms" Version="4.0.0-rc1" />
-    <PackageReference Include="AutoFixture.Xunit2" Version="4.0.0-rc1" />
-    <PackageReference Include="FluentAssertions" Version="4.19.4" />
-    <PackageReference Include="Moq" Version="4.7.145" />
+    <PackageReference Include="AutoFixture" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.Idioms" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.4.0" />
+    <PackageReference Include="FluentAssertions" Version="5.4.1" />
+    <PackageReference Include="Moq" Version="4.8.3" />
   </ItemGroup>
 </Project>
