--- a/src/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
@@ -196,6 +196,10 @@
       <Project>{af5c0ef6-3675-4a5e-a2f3-daff4dde228d}</Project>
       <Name>Restaurant.Mobile.UI</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Restaurant.Abstractions\Restaurant.Abstractions.csproj">
+      <Project>{147B8D2D-E0C0-415A-8380-7739CC0F581A}</Project>
+      <Name>Restaurant.Abstractions</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -311,9 +315,6 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Reflection">
-      <Version>4.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reflection.Emit">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Reflection.Extensions">
