Refactoring some viewModels and FoodDetailViewModel improved with AbsoluteView
Former-commit-id: f6dd6c72d09e2e29ca7289fedf25051791c319ec
Former-commit-id: 32fb9858bd01d24c149915115c7a9b543b249310 [formerly 9fad8de8ad3dcb2ba488fbb5dc5f7981424be59b]
Former-commit-id: be6a64c798ffd679261d890f89f4495170c0cc61

--- a/src/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
@@ -1,22 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="Managers\**" />
     <EmbeddedResource Remove="Managers\**" />
     <None Remove="Managers\**" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="ReactiveUI" Version="8.3.1" />
     <PackageReference Include="Refit" Version="4.6.16" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Restaurant.Common\Restaurant.Common.csproj" />
   </ItemGroup>
-
 </Project>
