--- a/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
@@ -1,11 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="AutoMapper" Version="7.0.1" />
@@ -14,10 +12,8 @@
     <PackageReference Include="NLog" Version="4.5.6" />
     <PackageReference Include="ReactiveUI" Version="8.3.1" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Restaurant.Common\Restaurant.Common.csproj" />
     <ProjectReference Include="..\Restaurant.Abstractions\Restaurant.Abstractions.csproj" />
   </ItemGroup>
-
 </Project>
