--- a/src/Server/Services/Identity/Identity.API/appsettings.json
+++ b/src/Server/Services/Identity/Identity.API/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RestaurantDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
   },
 
   "Logging": {
