--- a/src/Server/Services/Identity/Identity.API.UnitTests/Identity.API.UnitTests.csproj
+++ b/src/Server/Services/Identity/Identity.API.UnitTests/Identity.API.UnitTests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.1.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
 
   </ItemGroup>
