--- a/src/Server/Services/Identity/Identity.API/Dockerfile
+++ b/src/Server/Services/Identity/Identity.API/Dockerfile
@@ -5,10 +5,10 @@ EXPOSE 44300
 
 FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
-COPY Server/Services/Identity/Identity.API/Identity.API.csproj Server/Services/Identity/Identity.API/
-RUN dotnet restore Server/Services/Identity/Identity.API/Identity.API.csproj
+COPY Identity.API.csproj .
+RUN dotnet restore Identity.API.csproj
 COPY . .
-WORKDIR /src/Server/Services/Identity/Identity.API
+WORKDIR /src
 RUN dotnet build Identity.API.csproj -c Release -o /app
 
 FROM build AS publish
