--- a/src/Server/Services/Menu/Menu.API/appsettings.json
+++ b/src/Server/Services/Menu/Menu.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "IdentityUrl" : "http://localhost:5000",
   "ConnectionStrings" : {
     "MenuDatabaseConnectionString" : "Host=localhost;Database=menu_database;Username=jurabek;"
   },
