--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -5,6 +5,11 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__MenuDatabaseConnectionString=Host=menu-data;Database=menu_database;Username=admin;Password=Passw0rd!
+  
+  identity-api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__IdentityConnectionString=Host=identity-data;Database=identity_database;Username=admin;Password=Passw0rd!
 
   menu-data:
     environment:
@@ -12,3 +17,10 @@ services:
       - POSTGRES_USER=admin
       - PGDATA=/pg
       - POSTGRES_DB=menudb
+  
+  identity-data:
+    environment:
+      - POSTGRES_PASSWORD=Passw0rd!
+      - POSTGRES_USER=admin
+      - PGDATA=/pg
+      - POSTGRES_DB=identitydb
