orders project added
Former-commit-id: 6b01c56ff332f89c51592d1aad26d589ddeca62f
Former-commit-id: 5205382d6a50f65338e2381b84a044a2b20570e2 [formerly 992ffec2574442101c31a436e4e7af722875ebfc]
Former-commit-id: ef51a4af656582289eb9ad6709703c29cc96d8c4

--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -5,20 +5,31 @@ services:
     image: restaurant/identity
     build: ./Services/Identity/Identity.API/
     ports:
-       - "9090:9090"
+       - "5000:80"
     depends_on:
        - identity-data
- 
+
   menu-api:
     image: restaurant/menu
     build: ./Services/Menu/Menu.API/
     ports:
-       - "8080:80"
+       - "5100:80"
     depends_on:
        - menu-data
-    
+  
+  basket-api:
+    image: restaurant/basket
+    build: ./Services/Basket/src/basket_api/
+    ports:
+      - "5200:80"
+    depends_on:
+      - basket-data
+
   menu-data:
     image: postgres:10.1
   
   identity-data:
     image: postgres:10.1
+
+  basket-data:
+    image: redis
