--- a/src/Server/Services/Menu/Menu.API/Dockerfile
+++ b/src/Server/Services/Menu/Menu.API/Dockerfile
@@ -1,5 +1,6 @@
 FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
 WORKDIR /app
+EXPOSE 5100
 
 FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
