order service implementation
Former-commit-id: 3be68185e9000f828f3759d1aa922b1196f3bc45
Former-commit-id: 904d5581637fcf3608c3c93f123bb1e235197290 [formerly e3598279a3ed353b66e5e9031ab0bfe620cc2f40]
Former-commit-id: 03c9fc4836d0ee85911194de4f401740b8ae5d59

--- a/src/Server/Services/Menu/Menu.API/appsettings.json
+++ b/src/Server/Services/Menu/Menu.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "IdentityUrl" : "http://localhost:5000",
   "ConnectionStrings" : {
-    "MenuDatabaseConnectionString" : "Host=localhost;Database=menu_database;Username=jurabek;"
+    "MenuDatabaseConnectionString" : "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
   },
   "Logging": {
     "LogLevel": {
