--- a/src/Server/Services/Ordering/order.api/src/main/resources/application.properties
+++ b/src/Server/Services/Ordering/order.api/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_orders_database
 spring.datasource.username= jurabek
 spring.datasource.password=
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.driver-class-name=org.postgresql.Driver
