--- a/src/Server/Services/Identity/Identity.API.UnitTests/Identity.API.UnitTests.csproj
+++ b/src/Server/Services/Identity/Identity.API.UnitTests/Identity.API.UnitTests.csproj
@@ -13,12 +13,19 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.1.1" />
+
+    <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
+    <PackageReference Include="AutoFixture" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.Idioms" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.4.0" />
+    <PackageReference Include="FluentAssertions" Version="5.4.1" />
+    <PackageReference Include="Moq" Version="4.8.3" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
 
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\Testing\BaseUnitTests\BaseUnitTests.csproj" />
     <ProjectReference Include="..\Identity.API\Identity.API.csproj" />
   </ItemGroup>
 
