--- a/src/Server/Services/Menu/Menu.API.UnitTests/Menu.API.UnitTests.csproj
+++ b/src/Server/Services/Menu/Menu.API.UnitTests/Menu.API.UnitTests.csproj
@@ -12,10 +12,17 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+
+    <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
+    <PackageReference Include="AutoFixture" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.Idioms" Version="4.4.0" />
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.4.0" />
+    <PackageReference Include="FluentAssertions" Version="5.4.1" />
+    <PackageReference Include="Moq" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\Testing\BaseUnitTests\BaseUnitTests.csproj" />
     <ProjectReference Include="..\Menu.API\Menu.API.csproj" />
   </ItemGroup>
 
