order api changes
Former-commit-id: 8a866a53b3a466775510acae221678370898641d
Former-commit-id: 3f5a6e9f5b33e340c78ff10c7b7e2eb29bc21868 [formerly 054f2b6b433c85aeeba58b32a4bd3d01dbd68e01]
Former-commit-id: f5f6c55ab43c4b4eb2af911ff79c07e7363297b4

--- a/src/Server/services/java/order.api/build.gradle
+++ b/src/Server/services/java/order.api/build.gradle
@@ -30,5 +30,6 @@ dependencies {
 	compile ('org.postgresql:postgresql:42.2.5')
 	compile('io.springfox:springfox-swagger2:2.9.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
+	compile('org.modelmapper:modelmapper:2.3.0')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
