--- a/src/Server/services/java/order.api/src/main/resources/application.properties
+++ b/src/Server/services/java/order.api/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username= jurabek
 spring.datasource.password=
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port = 8090
