--- a/src/Server/services/go/src/basket.api/Dockerfile
+++ b/src/Server/services/go/src/basket.api/Dockerfile
@@ -1,7 +1,9 @@
 #build stage
 FROM golang:alpine AS builder
-WORKDIR /go/src/basket_api
-COPY . .
+
+WORKDIR $GOPATH/src/basket.api
+COPY . ./
+
 RUN apk add --no-cache git
 RUN go get -d -v ./...
 RUN go install -v ./...
@@ -9,8 +11,8 @@ RUN go install -v ./...
 #final stage
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
-COPY --from=builder /go/bin/basket_api /basket_api
-ENTRYPOINT ./basket_api    
-LABEL Name=basket_api Version=0.0.1
-EXPOSE 5000
-ENV PORT 5000
+COPY --from=builder /go/bin/basket.api ./
+ENTRYPOINT ./basket.api    
+LABEL Name=basket.api Version=0.0.1
+EXPOSE 5200
+ENV PORT 5200
