added test for basket_api and configured test stage in gitlab pipeline
Former-commit-id: 1984a5afc5d50bb0f50ed7b0f0131ca4acc21908
Former-commit-id: b56ef00eda7571308d199a2bdd1d74c3b9d55b7e [formerly d1f42bce4cc33c7e2d54a31d1fc02c488c8ffe19]
Former-commit-id: b06a6d7247ef655772b5438131924f2054964db7

--- a/.gitignore
+++ b/.gitignore
@@ -217,6 +217,6 @@ ModelManifest.xml
 Images/
 *.idea/
 *.a
-*/Basket/src/gopkg.in/*
-*/Basket/src/github/*
-src/Server/services/go/src/basket.api/basket.api
+src/Server/services/go/src/gopkg.in
+src/Server/services/go/src/github.com
+src/Server/services/go/src/basket.api/main
