image name must be lower case issue fixed
Former-commit-id: 557d3e3fbca950c135c60f75040de7424be95cea
Former-commit-id: 6894ff3ed34e00b55a709eeeef7caac11be62848 [formerly 420a43d453fd5b20564a89beae49513037027b1c]
Former-commit-id: 0e2310c026aa22b65d2c9284630d2f0b7d3d7da9

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,26 +18,26 @@ before_script:
 build:basket_api:
   stage: build
   script:
-    - ci/build.sh BASKET_API
+    - ci/build.sh basket_api
 
 build:order_api:
   stage: build
   script:
-    - ci/build.sh ORDER_API
+    - ci/build.sh order_api
 
 build:identity_api:
   stage: build
   script:
-    - ci/build.sh IDENTITY_API
+    - ci/build.sh identity_api
 
 build:menu_api:
   stage: build
   script:
-    - ci/build.sh MENU_API
+    - ci/build.sh menu_api
 
 test:basket_api:
   stage: test
   script: 
-    - ci/test.sh BASKET_API
+    - ci/test.sh basket_api
   dependencies:
     - build:basket_api
