basket_api docker changes
Former-commit-id: 3657177bf10e9b5152f9b39cdd820476954c2c73
Former-commit-id: 17988bbd1fcde74b0bb73d652d0356b967c9899e [formerly 63620a664a70bb41e3a5b3b461c75051658da43e]
Former-commit-id: 1a276191d08c1ce987a7763944becb384d130812

--- a/src/Server/services/go/src/basket.api/Dockerfile
+++ b/src/Server/services/go/src/basket.api/Dockerfile
@@ -6,8 +6,8 @@ COPY . ./
 
 RUN apk add --no-cache git
 RUN go get -d -v -t ./...
-RUN go test -c --cover ./controllers -o /tests/controllers.test
 RUN go install -v ./...
+RUN go test -c ./controllers -o /tests/controllers.test
 
 #final stage
 FROM alpine:latest
