code coverage with docker container and publish to gitlab pages
Former-commit-id: a7e28837ea88661a1477f7292b3c628a8c936876
Former-commit-id: 3ba906af3f84a4261726839c9b3a226daa46a731 [formerly e0ec357caea1af08304e6e3321d16080b585e727]
Former-commit-id: a7a49b0b7914201c1040f1db562aa0e5efb5b6e2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,5 +53,13 @@ test:menu_api:
   stage: test
   script: 
     - ci/test.sh menu_api
+  after_script:
+    - mv coveragereport/ public/
   dependencies:
     - build:menu_api
+  artifacts:
+    paths:
+      - public
+    expire_in: 30 days
+  only:
+    - master
