--- a/src/Server/services/netcore/Menu/Menu.API.UnitTests/Menu.API.UnitTests.csproj
+++ b/src/Server/services/netcore/Menu/Menu.API.UnitTests/Menu.API.UnitTests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
-    <IsPackable>false</IsPackable>
+    <DebugType>Portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
