--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,10 +53,19 @@ test:menu_api:
   stage: test
   script: 
     - ci/test.sh menu_api
-  after_script:
-    - mv coveragereport/ public/
+  
   dependencies:
     - build:menu_api
+  artifacts:
+    paths:
+      - coveragereport/
+
+pages:
+  stage: deploy
+  dependencies:
+    - test:menu_api
+  script:
+    - mv coveragereport/ public/
   artifacts:
     paths:
       - public
