curl issue fixed
Former-commit-id: c87d4ee6192403a45e8de6aac402e65ac4432b0c
Former-commit-id: 05660140fbca7eb0abb7ba59739599b2358d72c0 [formerly a5cb7f21dceb2105e7767e77e9228e52d9084314]
Former-commit-id: 43861a12564b475b1fbe1f20f7cbcdf46b5ac324

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,8 @@ test:identity_api:
 
 test:menu_api:
   stage: test
+  before_script:
+    - apk add --update curl && rm -rf /var/cache/apk/*
   script:
     - ci/test.sh menu_api
   dependencies:
