badges upload to gitlab pages
Former-commit-id: 538cd322ea767d18b61800ad82954f10923d29ef
Former-commit-id: 380b80d48536dceff70b67025853ad5896ed4ea8 [formerly 638e61978dddecf6d7645da5deb9b728d7c22e19]
Former-commit-id: 4cb27ea699ee2a473205b82f122efce19f302340

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ variables:
   IMAGE_BASE_NAME: registry.gitlab.com/jurabek/restaurant-app
 
 before_script:
+  - mkdir -p badges
   - apk add --update curl && rm -rf /var/cache/apk/*
   - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
   - cd src/Server/
@@ -59,14 +60,14 @@ test:menu_api:
     - build:menu_api
   artifacts:
     paths:
-      - menu_coverage.svg
+      - badges/
 
 pages:
   stage: deploy
   dependencies:
     - test:menu_api
   script:
-    - mv menu_coverage.svg public/
+    - mv badges/ public/
   artifacts:
     paths:
       - public
